payara-manual-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payara-manual-deployment
  labels:
    app: payara-manual-deployment
spec:
  selector:
    matchLabels:
      app: payara-manual-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: payara-manual-deployment
    spec:
      containers:
      - name: server-full
        image: payara/server-full        
        ports:
        - containerPort: 8080
