payara-manual-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payara-manual-deployment
  name: payara-manual-service
  namespace: default
spec:
  ports:
  - nodePort: 32000
    port: 9000
    protocol: TCP
    targetPort: 8080
  selector:
    app: payara-manual-deployment
#  type: NodePort
  type: LoadBalancer
#  externalIPs:
#  - 192.168.0.241
